<resources>
    <string name="app_name">QuizApp</string>
    <string name="home">HOME</string>
    <string name="subs">SUBSCRIPTIONS</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="profile">PROFILE</string>
    <string name="select_category">Select your favourite category</string>
    <string name="contest_available">Available Contests</string>
    <string name="welcome">Welcome</string>
    <string name="easy">Easy</string>
    <string name="med">Medium</string>
    <string name="diff">Difficult</string>
    <string name="total">Total points earned</string>
    <string name="questions">Questions answered</string>
    <string name="next">more points for next medal</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="newUser">New User? Register here</string>
    <string name="edittext">New User Registration</string>
    <string name="editfname">Enter User Name</string>
    <string name="editemail">Enter Email</string>
    <string name="editpass">Enter Password</string>
    <string name="register">Register</string>
    <string name="dynamic">Show Dynamic Contests</string>
    <string name="results">RESULTS OF</string>
</resources>
